syntax = "proto3";

option go_package = "kueue/internal/proto";

service ControllerService {
  rpc GetTopicProducer (ProducerTopicInfoRequest) returns (ProducerTopicInfoResponse);
  rpc GetTopicConsumer (ConsumerTopicInfoRequest) returns (ConsumerTopicInfoResponse);
  rpc CreateTopic (CreateTopicRequest) returns (CreateTopicResponse); // New
}

message ProducerTopicInfoRequest {
  string topic_name = 1;
}

message ProducerTopicInfoResponse {
  repeated PartitionMetadata partitions = 1;
}

message PartitionMetadata {
  string partition_id = 1;
  NodeInfo leader = 2;
}

message ConsumerTopicInfoRequest {
  string topic_name = 1;
  string consumer_id = 2;
}

message ConsumerTopicInfoResponse {
  string topic_name = 1;
  string partition_id = 2;
  NodeInfo broker = 3;
}

message CreateTopicRequest { // New
  string topic_name = 1;
  int32 partition_count = 2;
  int32 replication_factor = 3;
}

message CreateTopicResponse { // New
  bool success = 1;
  string error_message = 2;
}

message NodeInfo {
  string address = 1;
  uint32 port = 2;
}

service BrokerService {
  rpc Heartbeat (HeartbeatRequest) returns (HeartbeatResponse);
  rpc ProduceMessage (ProduceRequest) returns (ProduceResponse); // New
}

message HeartbeatRequest {
  string broker_id = 1;
}

message HeartbeatResponse {}

message ProduceRequest { // New
  string topic = 1;
  string partition_id = 2;
  string key = 3;
  string value = 4;
}

message ProduceResponse { // New
  bool success = 1;
  string error_message = 2;
}
